@@ -1,7 +1,5 @@
 ### Prio 1 ###
 
-id3 vs. ape tags with mp3gain
-
 replay gain: multiple ogg files -> progress
 test vfat compatible file names
 processID/convertID/... eindeutig berechnen ... müsste so funktionieren
