@@ -3,6 +3,11 @@
 
 #include "soundkonverter_replaygain_aacgain.h"
 
+#include <KDialog>
+#include <QComboBox>
+#include <QHBoxLayout>
+#include <QLabel>
+
 
 soundkonverter_replaygain_aacgain::soundkonverter_replaygain_aacgain( QObject *parent, const QStringList& args  )
     : ReplayGainPlugin( parent )
@@ -11,6 +16,12 @@ soundkonverter_replaygain_aacgain::soundkonverter_replaygain_aacgain( QObject *p
     
     allCodecs += "aac";
     allCodecs += "mp3";
+    
+    KSharedConfig::Ptr conf = KGlobal::config();
+    KConfigGroup group;
+    
+    group = conf->group( "Plugin-"+name() );
+    tagMode = group.readEntry( "tagMode", 0 );
 }
 
 soundkonverter_replaygain_aacgain::~soundkonverter_replaygain_aacgain()
@@ -96,7 +107,45 @@ bool soundkonverter_replaygain_aacgain::isConfigSupported( ActionType action, co
 }
 
 void soundkonverter_replaygain_aacgain::showConfigDialog( ActionType action, const QString& codecName, QWidget *parent )
-{}
+{    if( !configDialog.data() )
+    {
+        configDialog = new KDialog( parent );
+        configDialog.data()->setCaption( i18n("Configure %1").arg(global_plugin_name)  );
+        configDialog.data()->setButtons( KDialog::Ok | KDialog::Cancel /*| KDialog::Apply*/ );
+
+        QWidget *configDialogWidget = new QWidget( configDialog.data() );
+        QHBoxLayout *configDialogBox = new QHBoxLayout( configDialogWidget );
+        QLabel *configDialogTagLabel = new QLabel( i18n("Use tag format:"), configDialogWidget );
+        configDialogBox->addWidget( configDialogTagLabel );
+        configDialogTagLabelComboBox = new QComboBox( configDialogWidget );
+        configDialogTagLabelComboBox->addItem( "APE" );
+        configDialogTagLabelComboBox->addItem( "ID3v2" );
+        configDialogBox->addWidget( configDialogTagLabelComboBox );
+
+        configDialog.data()->setMainWidget( configDialogWidget );
+        connect( configDialog.data(), SIGNAL( okClicked() ), this, SLOT( configDialogSave() ) );
+        //connect( configDialog.data(), SIGNAL( applyClicked() ), this, SLOT( configDialogSave() ) );
+        //connect( configDialogTagLabelComboBox, SIGNAL( changed( bool ) ), this, SLOT( enableButtonApply( bool ) ) );
+
+        configDialog.data()->enableButtonApply( false );
+    }
+    configDialogTagLabelComboBox->setCurrentIndex( tagMode );
+    configDialog.data()->show();
+}
+
+void soundkonverter_replaygain_aacgain::configDialogSave()
+{
+    if( configDialog.data() )
+    {
+        tagMode = configDialogTagLabelComboBox->currentIndex();
+
+        KSharedConfig::Ptr conf = KGlobal::config();
+        KConfigGroup group;
+        
+        group = conf->group( "Plugin-"+name() );
+        group.writeEntry( "tagMode", tagMode );
+    }
+}
 
 bool soundkonverter_replaygain_aacgain::hasInfo()
 {
@@ -138,6 +187,16 @@ int soundkonverter_replaygain_aacgain::apply( const KUrl::List& fileList, Replay
         connect( newItem->process, SIGNAL(finished(int,QProcess::ExitStatus)), this, SLOT(undoProcessExit(int,QProcess::ExitStatus)) );
         undoFileList = fileList;
     }
+    if( tagMode == 0 )
+    {
+        (*newItem->process) << "-s";
+        (*newItem->process) << "a";
+    }
+    else
+    {
+        (*newItem->process) << "-s";
+        (*newItem->process) << "i";
+    }
     for( int i = 0; i < fileList.count(); i++ )
     {
         (*newItem->process) << fileList.at(i).toLocalFile();
@@ -178,6 +237,16 @@ void soundkonverter_replaygain_aacgain::undoProcessExit( int exitCode, QProcess:
     (*item->process) << binaries["aacgain"];
     (*item->process) << "-s";
     (*item->process) << "d";
+    if( tagMode == 0 )
+    {
+        (*item->process) << "-s";
+        (*item->process) << "a";
+    }
+    else
+    {
+        (*item->process) << "-s";
+        (*item->process) << "i";
+    }
     for( int i=0; i<undoFileList.count(); i++ )
     {
         (*item->process) << undoFileList.at(i).toLocalFile();
