@@ -1,8 +1,9 @@
 1.0.0:
+-Add: Option to choose between APE and ID3v2  tags for mp3gain and aacgain
 -Fix: Call neroAacEnc with the correct bitrate
 -Fix: Undo mp3gain and aacgain changes correctly
 -Fix: Loading the wrong Replay Gain plugin
--Change: Make it possible to overwrite hidden lame parameters with the additional partameters option
+-Change: Make it possible to overwrite hidden lame parameters with the additional parameters option
 
 0.9.95 (1.0.0 rc3):
 -Add: Updated czech translation (by Pavel Fric)
